test: song service test